--- a/index.html
+++ b/index.html
@@ -365,6 +365,27 @@
   </div>
   <!-- Best Freelancer End -->
 
+  <!-- Search Algorithm View -->
+  <div class="bg-[#FFF]">
+    <div class="container px-4 py-20 mx-auto">
+      <div class="flex">
+        <div class="flex-auto w-1/2">
+          <img src="images/algo.png" class="w-[42rem] h-auto">
+        </div>
+        <div class="flex-auto w-1/2 my-auto">
+          <div class="px-[6.5%]">
+            <h4 class="leading-none text-[#050931] tracking-widest text-[3.4rem]"><span class="font-thin">Bube search algorithm chooses</span> <span class="font-medium">from 5,000+ artisans.</span></h4>
+            <p class="text-[#8B939A] text-[1.1rem] my-[5%]">
+              Making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+            </p>
+            <button class="bg-[#0071BC] text-white text-md px-10 py-3 rounded-3xl">View All Jobs</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Search Algorithm End -->
+
   <!-- Download App Section -->
   <div class="bg-white py-[2%]">
     <div class="bg-[#D1E8F5] w-[75%] mx-auto py-4 rounded-3xl">
