Added Boost Account Section

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
               <p class="text-center text-[#8B939A] font-light text-[0.5rem] lg:text-sm">Applied for a job</p>
             </div>
           </div>
-          <div class="bg-[#ffffffb5] h-[3rem] w-[12rem] lg:h-[5rem] lg:w-[18rem] absolute rounded-2xl lg:mt-[23rem] lg:ml-2  xl:mt-[34rem] xl:ml-20 mt-[14.5rem] ml-0">
+          <div class="bg-[#ffffffb5] h-[3rem] w-[12rem] lg:h-[5rem] lg:w-[18rem] absolute rounded-2xl lg:mt-[23rem] lg:ml-2  xl:mt-[34rem] xl:ml-20 mt-[14.5rem] ml-0 shadow-md">
             <img src="images/stars.png" class="w-1/4 lg:w-1/3 mt-2 lg:mt-5 ml-4">
             <p class="text-[#4F516A] text-[0.6rem] lg:text-sm mt-2 ml-4">4.7 Rating based on over 500 reviews</p>
           </div>
-          <div class="bg-[#ffffffb5] h-[3rem] w-[12rem] lg:h-[5rem] lg:w-[18rem] absolute rounded-2xl right-0 xl:mr-[8rem] xl:mt-[29rem] lg:mr-[1rem] lg:mt-[19rem] mr-2 mt-[11rem]">
+          <div class="bg-[#ffffffb5] h-[3rem] w-[12rem] lg:h-[5rem] lg:w-[18rem] absolute rounded-2xl right-0 xl:mr-[8rem] xl:mt-[29rem] lg:mr-[1rem] lg:mt-[19rem] mr-2 mt-[11rem] shadow-md">
             <img src="images/gmail_pic.png" class="w-[12%] mt-2 lg:mt-3 ml-4 absolute">
             <img src="images/tick_pic.png" class="w-[10%] mt-2 lg:mt-3 mr-2 right-0 absolute">
             <p class="text-[#0071BC] font-medium text-md relative z-10 lg:mt-3 lg:ml-16 mt-1 ml-12">Congrats!</p>
@@ -365,6 +365,46 @@
   </div>
   <!-- Best Freelancer End -->
 
+  <!-- Boost Account View -->
+  <div class="bg-[#F6F7FB]">
+    <div class="container px-4 py-20 mx-auto">
+      <div class="flex">
+        <div class="flex-auto w-1/2">
+          <div class="pl-[7%]">
+            <h4 class="leading-tight text-[#050931] text-[3.2rem]"><span class="font-thin">Boost your account</span><br><span class="font-medium">With Premium Features</span></h4>
+            <div class="text-[#8B939A] text-[1.1rem] my-[5%] mr-[10%]">
+              <p class="pb-4">
+                Making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable lorem ipsum.
+              </p>
+              <p>
+                Making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+              </p>
+            </div>
+            <button class="bg-[#0071BC] text-white text-md px-10 py-3 rounded-3xl">Learn More</button>
+          </div>
+        </div>
+        <div class="flex-auto w-1/2">
+          <img src="images/boost.png" class="w-[42rem] h-auto ml-[7%]">
+
+          <div class="bg-[#ffffff82] rounded-2xl w-[5rem] h-[5rem] lg:w-[9rem] lg:h-[9rem] absolute shadow-md border border-solid border-[#fff] right-0 mr-[12.8rem] mt-[-44.5rem]">
+            <img src="images/bitcoin.png" class="w-[50%] h-auto object-center mx-auto mt-2 lg:mt-4 rounded-full">
+            <div>
+              <p class="text-center text-black font-medium text-[0.6rem] lg:text-sm mt-2">Cryptocurrency</p>
+            </div>
+          </div>
+
+          <div class="bg-[#ffffffb5] h-[3rem] w-[12rem] lg:h-[5rem] lg:w-[18rem] absolute rounded-2xl ml-[5.5rem] mt-[-10.5rem] shadow-md">
+            <img src="images/gmail_pic.png" class="w-[12%] mt-2 lg:mt-3 ml-4 absolute">
+            <img src="images/tick_pic.png" class="w-[10%] mt-2 lg:mt-3 mr-2 right-0 absolute">
+            <p class="text-[#0071BC] font-medium text-md relative z-10 lg:mt-3 lg:ml-16 mt-1 ml-12">Congrats!</p>
+            <p class="text-[#4F516A] text-[0.6rem] lg:text-sm lg:mt-1 lg:ml-16 mt-0 ml-12 relative z-10">You are on top search</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Boost Account End -->
+
   <!-- Search Algorithm View -->
   <div class="bg-[#FFF]">
     <div class="container px-4 py-20 mx-auto">
@@ -378,7 +418,7 @@
             <p class="text-[#8B939A] text-[1.1rem] my-[5%]">
               Making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
             </p>
-            <button class="bg-[#0071BC] text-white text-md px-10 py-3 rounded-3xl">View All Jobs</button>
+            <button class="bg-[#0071BC] text-white text-md px-10 py-3 rounded-3xl">Submit An Application</button>
           </div>
         </div>
       </div>
