--- a/index.html
+++ b/index.html
@@ -365,6 +365,34 @@
   </div>
   <!-- Best Freelancer End -->
 
+  <!-- Stories View -->
+  <div class="bg-[#FFF]">
+    <div class="container py-20 mx-auto">
+      <p class="text-[#050931] text-[2.8rem] font-thin text-center mb-10">Stories & <span class="font-medium">ideas</span></p>
+      <div class="container mx-auto space-y-2 lg:space-y-0 lg:gap-12 lg:grid lg:grid-cols-3 w-[80%]">
+        <div class="w-full rounded">
+          <img src="images/s_image1.png" alt="image">
+          <p class="text-[#8B939A] text-[1.2rem] font-light py-4"><i class="fa-solid fa-calendar-days mr-4"></i>25 july 2022</p>
+          <p class="text-[#050931] text-[1.3rem] font-medium leading-tight">10 tips how to price your services and win  customers!</p>
+          <p class="text-[#8B939A] text-[0.9rem] font-light py-2">The following tips will detail how to meet your business goals in pricing services and what factors..</p>
+        </div>
+        <div class="w-full rounded">
+          <img src="images/s_image2.png" alt="image">
+          <p class="text-[#8B939A] text-[1.2rem] font-light py-4"><i class="fa-solid fa-calendar-days mr-4"></i>07 Aug 2021</p>
+          <p class="text-[#050931] text-[1.3rem] font-medium leading-tight">10 tips how to price your services and win  customers!</p>
+          <p class="text-[#8B939A] text-[0.9rem] font-light py-2">The following tips will detail how to meet your business goals in pricing services and what factors..</p>
+        </div>
+        <div class="w-full rounded">
+          <img src="images/s_image3.png" alt="image">
+          <p class="text-[#8B939A] text-[1.2rem] font-light py-4"><i class="fa-solid fa-calendar-days mr-4"></i>14 april 2022</p>
+          <p class="text-[#050931] text-[1.3rem] font-medium leading-tight">10 tips how to price your services and win  customers!</p>
+          <p class="text-[#8B939A] text-[0.9rem] font-light py-2">The following tips will detail how to meet your business goals in pricing services and what factors..</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Stories End -->
+
   <!-- Boost Account View -->
   <div class="bg-[#F6F7FB]">
     <div class="container px-4 py-20 mx-auto">
