Added Riding Section

--- a/index.html
+++ b/index.html
@@ -365,6 +365,43 @@
   </div>
   <!-- Best Freelancer End -->
 
+  <!-- Riding View -->
+  <div class="bg-[#F8F8F8]">
+    <div class="container py-20 mx-auto">
+      <p class="text-[#050931] text-[2.8rem] font-thin text-center mb-10">Our <span class="font-medium">Riding Features</span></p>
+      <div class="container mx-auto space-y-2 lg:space-y-0 lg:gap-12 lg:grid lg:grid-cols-3 w-[80%]">
+        <div class="w-full text-center">
+          <div class="bg-white w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl">
+            <img src="images/yellow_car.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
+          </div>
+          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+            <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">Get A Ride</p>
+            <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
+          </div>
+        </div>
+        <div class="w-full text-center">
+          <div class="bg-white w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl">
+            <img src="images/price_tag.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
+          </div>
+          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+            <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">The Best Price</p>
+            <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
+          </div>
+        </div>
+        <div class="w-full text-center">
+          <div class="bg-white w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl">
+            <img src="images/fing_p.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
+          </div>
+          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+            <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">Easy To Use</p>
+            <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Riding End -->
+
   <!-- Stories View -->
   <div class="bg-[#FFF]">
     <div class="container py-20 mx-auto">
