Added Get Ride Section

--- a/index.html
+++ b/index.html
@@ -365,6 +365,27 @@
   </div>
   <!-- Best Freelancer End -->
 
+  <!-- Get Ride View -->
+  <div class="bg-[#FFF]">
+    <div class="container px-4 py-20 mx-auto">
+      <div class="flex">
+        <div class="flex-auto w-1/2">
+          <img src="images/get_ride.png" class="w-[42rem] h-auto">
+        </div>
+        <div class="flex-auto w-1/2 my-auto">
+          <div class="px-[6.5%]">
+            <h4 class="leading-none text-[#050931] tracking-widest text-[3.4rem] font-medium">Get A Ride In Minutes!</h4>
+            <p class="text-[#8B939A] text-[1.1rem] mt-4 mb-10">
+              Pick your destination, request a ride, meet your driver, enjoy the journey.
+            </p>
+            <button class="bg-[#0071BC] text-white text-md px-10 py-3 rounded-3xl">Get Started</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Get Ride End -->
+
   <!-- Riding View -->
   <div class="bg-[#F8F8F8]">
     <div class="container py-20 mx-auto">
