--- a/index.html
+++ b/index.html
@@ -365,6 +365,43 @@
   </div>
   <!-- Best Freelancer End -->
 
+  <!-- Advert View -->
+  <div class="bg-[#D1E8F5]">
+    <div class="bg-[#0071BC] h-[37.5rem]">
+      <div class="flex w-[70%] mx-auto">
+        <div class="flex-auto w-1/2 px-[6rem] pt-[10.5rem]">
+          <div class="px-[6.5%] text-white">
+            <p class="text-[1.1rem] mb-2">Travel with us</p>
+            <h4 class="leading-tight text-[3.8rem] font-medium tracking-wide">The fast, affordable way to ride.</h4>
+            <p class="text-[1.1rem] mt-4">Download our app</p>
+            <div class="mt-3">
+              <div class="flex w-[16rem]">
+                <a href="#" class="w-[50%]"><img src="images/app_store.png" class="w-[100%] h-auto"></a>
+                <a href="#" class="w-[50%] ml-5"><img src="images/play_store.png" class="w-[100%] h-auto"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="flex-auto w-1/2">
+          <img src="images/advert.png" class="w-[34rem] h-auto mt-[5rem] absolute">
+        </div>
+      </div>
+    </div>
+    <div class="px-[10rem] py-[5rem]">
+      <div class="flex pl-[9rem] py-2">
+        <div class="flex-auto with-[80%] text-[#050931]">
+          <p class="text-[1.5rem] font-thin mb-2">Become A Driver</p>
+          <p class="text-[3.45rem] font-thin mb-2"><span class="font-light">Earn Extra Money</span> <span class="font-medium">With Driving</span></p>
+          <p class="text-[2.1rem] font-thin">Set Your Own Schedule, Be Your Own Boss.</p>
+        </div>
+        <div class="flex-auto with-[20%] my-auto text-right">
+          <button class="bg-[#0071BC] text-white text-md px-12 py-3 rounded-3xl mr-[11rem]">Sign Up For Free</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Advert End -->
+
   <!-- Get Ride View -->
   <div class="bg-[#FFF]">
     <div class="container px-4 py-20 mx-auto">
