--- a/index.html
+++ b/index.html
@@ -365,6 +365,44 @@
   </div>
   <!-- Best Freelancer End -->
 
+  <!-- Features View -->
+  <div class="bg-white">
+    <div class="container py-20 mx-auto">
+      <p class="text-[#050931] text-[1.1rem] font-thin text-center">Key Features</p>
+      <p class="text-[#050931] text-[2.8rem] font-thin text-center mb-10">Modern Way <span class="font-medium">Of Hiring</span></p>
+      <div class="container mx-auto space-y-2 lg:space-y-0 lg:gap-12 lg:grid lg:grid-cols-3 w-[80%]">
+        <div class="w-full text-center">
+          <div class="bg-[#EDFAFE] w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl rotate-45">
+            <img src="images/fing_p2.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
+          </div>
+          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+            <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">Easy To Use</p>
+            <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
+          </div>
+        </div>
+        <div class="w-full text-center">
+          <div class="bg-[#FFF8F5] w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl rotate-45">
+            <img src="images/search_icon.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
+          </div>
+          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+            <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">Market Place Matching</p>
+            <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
+          </div>
+        </div>
+        <div class="w-full text-center">
+          <div class="bg-[#E4F4F1] w-[10rem] h-[10rem] m-auto text-center relative rounded-3xl rotate-45">
+            <img src="images/verified.png" class="w-[40%] m-0 absolute top-[50%] left-[50%] translate-y-[-50%] translate-x-[-50%]" alt="image">
+          </div>
+          <div class="w-[24rem] h-[10rem] m-auto text-center relative mt-4 px-12">
+            <p class="text-[#050931] text-[1.3rem] pt-6 mb-2 font-medium">Verified Artisans</p>
+            <p class="text-[#8B939A] text-[1rem]">There are many variations of passages of Lorem Ipsum available</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Features End -->
+
   <!-- Advert View -->
   <div class="bg-[#D1E8F5]">
     <div class="bg-[#0071BC] h-[37.5rem]">
