--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#EBEBEB]">
+<body class="bg-[#EBEBEB] max-w-full overflow-x-hidden">
   <div class="header-2">
     <!-- header -->
     <nav class="bg-[#DCF0FB] py-2 md:py-4">
@@ -25,7 +25,7 @@
           <a href="#" class="p-2 lg:px-4 md:mx-2 text-[#363636] rounded">Find<span class="invisible">_</span>Talent</a>
           <a href="#" class="p-2 lg:px-4 md:mx-2 text-[#363636] rounded">Find<span class="invisible">_</span>Work</a>
           <a href="#" class="p-2 lg:px-4 md:mx-2 text-[#363636] rounded">Why<span class="invisible">_</span>Bube</a>
-          <a href="#" class="p-2 lg:px-4 md:mx-2 text-[#363636] rounded">Enterprise</a>
+          <a href="#" class="p-2 lg:px-4 md:mx-2 mb-4 md:mb-0 text-[#363636] rounded">Enterprise</a>
           <a href="#" class="p-2 lg:px-8 md:mx-2 text-[#1e50d7] text-center border border-solid border-[#1e50d7] rounded-3xl">Login</a>
           <a href="#" class="p-2 lg:px-8 md:mx-2 text-white text-center bg-[#1e50d7] rounded-3xl mt-3 md:mt-0">Signup</a>
         </div>
@@ -37,22 +37,22 @@
   <!-- Home View -->
   <div class="bg-[#DCF0FB]">
     <div class="container px-4 mx-auto">
-      <div class="flex">
-        <div class="flex-auto w-1/2">
-          <div class="flex w-[18rem] lg:w-[26rem] h-[42px] bg-[#C8E5F5] rounded-3xl mt-20 relative">
-            <a href="#" class="px-4 text-[0.5rem] lg:text-[0.7rem] mx-1 text-white text-center bg-[#1e50d7] rounded-3xl leading-8 h-3/4 my-auto">New</a>
-            <p class="text-[#363636] text-[0.6rem] lg:text-[0.9rem] leading-10 ml-2 overflow-hidden">stay connected to get upcoming job with Bube</p>
+      <div class="md:flex">
+        <div class="md:flex-auto md:w-1/2 pt-8 md:pt-0">
+          <div class="flex w-[26rem] h-[42px] bg-[#C8E5F5] rounded-3xl md:mt-20 relative">
+            <a href="#" class="px-4 text-[0.7rem] mx-1 text-white text-center bg-[#1e50d7] rounded-3xl leading-8 h-3/4 my-auto">New</a>
+            <p class="text-[#363636] text-[0.9rem] leading-10 ml-2 overflow-hidden">stay connected to get upcoming job with Bube</p>
           </div>
-          <div class="text-[#050931] mt-12">
-            <div><span class="font-thin text-[1.5rem] lg:text-[4rem] leading-10">The Easiest Way To</span><br> <span class="uppercase leading-none text-[2rem] lg:text-[4.5rem] font-medium">access artisans</span></div>
-            <p class="text-[0.8rem] lg:text-[1.7rem] font-light my-5">Your Dream Job is waitng For you</p>
-            <form class="flex bg-white p-2 rounded h-[3rem] lg:h-[4rem] w-[22rem] lg:w-[45rem] overflow-hidden relative justify-evenly">
-              <input type="" name="" placeholder="Job title or key words" class="bg-[#F5F6FA] rounded w-[49%] h-[99%] text-center">
-              <input type="" name="" placeholder="Talent" class="bg-[#F5F6FA] rounded w-[39%] h-[99%] text-center">
+          <div class="text-[#050931] mt-6 md:mt-12">
+            <div><span class="font-thin text-[2.5rem] lg:text-[4rem] leading-10">The Easiest Way To</span><br> <span class="uppercase leading-none text-[2.8rem] lg:text-[4.5rem] font-medium">access artisans</span></div>
+            <p class="text-[1.2rem] lg:text-[1.7rem] font-light my-5">Your Dream Job is waitng For you</p>
+            <form class="flex bg-white p-2 rounded h-[3.5rem] lg:h-[4rem] w-[25rem] lg:w-[45rem] overflow-hidden relative justify-evenly">
+              <input type="" name="" placeholder="Job title or key words" class="bg-[#F5F6FA] rounded w-[49%] h-[99%] text-center focus:outline-[#0071BC]">
+              <input type="" name="" placeholder="Talent" class="bg-[#F5F6FA] rounded w-[39%] h-[99%] text-center focus:outline-[#0071BC]">
               <button type="submit" class="bg-[#0071BC] text-white w-[9%] rounded"><i class="fas fa-search"></i></button>
             </form>
           </div>
-          <div class="mt-12">
+          <div class="mt-6 lg:mt-12">
             <p class="text-[#050931] text-[0.9rem] mb-2">We are trusted by</p>
             <div class="bg-white p-2 flex rounded w-[9rem] mb-12">
               <img src="images/google.png" class="w-4 h-auto mr-5">
@@ -62,23 +62,23 @@
             </div>
           </div>
         </div>
-        <div class="flex-auto w-1/2">
-          <div class="bg-[#ffffff82] rounded-2xl w-[5rem] h-[5rem] lg:w-[9rem] lg:h-[9rem] absolute shadow-md border border-solid border-[#fff] lg:mt-[6rem] lg:ml-[5.5rem] mt-2 ml-3">
+        <div class="md:flex-auto md:w-1/2">
+          <div class="bg-[#ffffff82] rounded-2xl w-[7rem] h-[7rem] lg:w-[9rem] lg:h-[9rem] absolute shadow-md border border-solid border-[#fff] mt-[4rem] lg:mt-[6rem] lg:ml-[5.5rem] ml-[2rem]">
             <img src="images/prof_pic1.png" class="w-[50%] h-auto object-center mx-auto mt-2 lg:mt-4 rounded-full">
             <div>
-              <p class="text-center text-black font-medium text-[0.6rem] lg:text-sm">Hemens</p>
-              <p class="text-center text-[#8B939A] font-light text-[0.5rem] lg:text-sm">Applied for a job</p>
+              <p class="text-center text-black font-medium text-[0.8rem] lg:text-sm">Hemens</p>
+              <p class="text-center text-[#8B939A] font-light text-[0.8rem] lg:text-sm">Applied for a job</p>
             </div>
           </div>
-          <div class="bg-[#ffffffb5] h-[3rem] w-[12rem] lg:h-[5rem] lg:w-[18rem] absolute rounded-2xl lg:mt-[23rem] lg:ml-2  xl:mt-[34rem] xl:ml-20 mt-[14.5rem] ml-0 shadow-md">
-            <img src="images/stars.png" class="w-1/4 lg:w-1/3 mt-2 lg:mt-5 ml-4">
-            <p class="text-[#4F516A] text-[0.6rem] lg:text-sm mt-2 ml-4">4.7 Rating based on over 500 reviews</p>
+          <div class="bg-[#ffffffb5] h-[4.5rem] w-[16rem] lg:h-[5rem] lg:w-[18rem] absolute rounded-2xl md:mt-[18.2rem] lg:mt-[23rem] lg:ml-2  xl:mt-[32rem] xl:ml-20 mt-[21.5rem] ml-0 shadow-md">
+            <img src="images/stars.png" class="w-1/3 mt-3 lg:mt-5 ml-4">
+            <p class="text-[#4F516A] text-[0.8rem] lg:text-sm mt-2 ml-4">4.7 Rating based on over 500 reviews</p>
           </div>
-          <div class="bg-[#ffffffb5] h-[3rem] w-[12rem] lg:h-[5rem] lg:w-[18rem] absolute rounded-2xl right-0 xl:mr-[8rem] xl:mt-[29rem] lg:mr-[1rem] lg:mt-[19rem] mr-2 mt-[11rem] shadow-md">
+          <div class="bg-[#ffffffb5] h-[4.5rem] w-[16rem] lg:h-[5rem] lg:w-[18rem] absolute rounded-2xl right-0 xl:mr-[8rem] xl:mt-[27rem] lg:mr-[1rem] lg:mt-[19rem] md:mt-[13.5rem] mr-2 mt-[16rem] shadow-md">
             <img src="images/gmail_pic.png" class="w-[12%] mt-2 lg:mt-3 ml-4 absolute">
             <img src="images/tick_pic.png" class="w-[10%] mt-2 lg:mt-3 mr-2 right-0 absolute">
-            <p class="text-[#0071BC] font-medium text-md relative z-10 lg:mt-3 lg:ml-16 mt-1 ml-12">Congrats!</p>
-            <p class="text-[#4F516A] text-[0.6rem] lg:text-sm lg:mt-1 lg:ml-16 mt-0 ml-12 relative z-10">You Have got an Email</p>
+            <p class="text-[#0071BC] font-medium text-md relative z-10 lg:mt-3 ml-16 mt-2">Congrats!</p>
+            <p class="text-[#4F516A] text-sm mt-1 ml-16 relative z-10">You Have got an Email</p>
           </div>
           <img src="images/home_pic1.png" class="w-5/6 h-auto mt-7 ml-auto lg:ml-[7rem]">
         </div>
@@ -91,46 +91,48 @@
   <div class="bg-[#F6F7FB]">
     <div class="container px-4 mx-auto">
       <div class="pt-12 mb-12">
-        <h4 class="leading-none"><span class="font-thin text-[2.5rem]">Explore</span><br> <span class="font-medium text-[3rem]">By Category</span></h4>
+        <h4 class="leading-none  text-center md:text-left">
+          <span class="font-thin lg:text-[2.5rem] text-[2rem]">Explore</span><br> <span class="font-medium lg:text-[3rem] text-[2.5rem]">By Category</span>
+        </h4>
       </div>
-      <div class="flex flex-row mb-0">
-        <div class="bg-white w-[16rem] h-[10rem] lg:h-[14rem] mb-12 rounded-xl mr-10 overflow-hidden">
-          <img src="images/leaf_pic.png" class="w-[15%] h-auto ml-[12%] mt-[10%]">
-          <p class="text-[#050931] pt-[5%] pl-[12%] lg:text-[1rem] text-[0.8rem] font-medium">Gardening</p>
-          <p class="text-[#8B939A] py-[2.5%] px-[12%] lg:text-[0.9rem] text-[0.75rem]">There are many variations of passages</p>
+      <div class="md:flex md:flex-row mb-10 md:gap-5 lg:gap-10">
+        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 md:mb-0">
+          <img src="images/leaf_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
+          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">Gardening</p>
+          <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
-        <div class="bg-white w-[16rem] h-[10rem] lg:h-[14rem] mb-12 rounded-xl mr-10 overflow-hidden">
-          <img src="images/ring_pic.png" class="w-[15%] h-auto ml-[12%] mt-[10%]">
-          <p class="text-[#050931] pt-[5%] pl-[12%] lg:text-[1rem] text-[0.8rem] font-medium">Tailoring</p>
-          <p class="text-[#8B939A] py-[2.5%] px-[12%] lg:text-[0.9rem] text-[0.75rem]">There are many variations of passages</p>
+        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 md:mb-0">
+          <img src="images/ring_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
+          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">Tailoring</p>
+          <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
-        <div class="bg-white w-[16rem] h-[10rem] lg:h-[14rem] mb-12 rounded-xl mr-10 overflow-hidden">
-          <img src="images/brush_pic.png" class="w-[15%] h-auto ml-[12%] mt-[10%]">
-          <p class="text-[#050931] pt-[5%] pl-[12%] lg:text-[1rem] text-[0.8rem] font-medium">Painting</p>
-          <p class="text-[#8B939A] py-[2.5%] px-[12%] lg:text-[0.9rem] text-[0.75rem]">There are many variations of passages</p>
+        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 md:mb-0">
+          <img src="images/brush_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
+          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">Painting</p>
+          <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
-        <div class="mb-12 w-[20rem] h-[10rem] lg:h-[14rem] overflow-hidden">
-          <img src="images/mesh.png" class="w-[20rem] h-auto object-center object-cover">
+        <div class="w-[24rem] h-[18rem] overflow-hidden mx-auto mb-10 md:mb-0">
+          <img src="images/mesh.png" class="w-[100%] h-[100%] object-center object-cover">
         </div>
       </div>
-      <div class="flex flex-row">
-        <div class="mb-12 w-[20rem] h-[10rem] lg:h-[14rem] mr-10 overflow-hidden">
-          <img src="images/mesh.png" class="w-[20rem] h-auto object-center object-cover">
+      <div class="md:flex md:flex-row pb-10 md:gap-5 lg:gap-10">
+        <div class="hidden md:block w-[24rem] h-[18rem] overflow-hidden mx-auto">
+          <img src="images/mesh.png" class="w-[100%] h-[100%] object-center object-cover">
         </div>
-        <div class="bg-white w-[16rem] h-[10rem] lg:h-[14rem] mb-12 rounded-xl mr-10 overflow-hidden">
-          <img src="images/marker_pic.png" class="w-[15%] h-auto ml-[12%] mt-[10%]">
-          <p class="text-[#050931] pt-[5%] pl-[12%] lg:text-[1rem] text-[0.8rem] font-medium">Graphic & Design</p>
-          <p class="text-[#8B939A] py-[2.5%] px-[12%] lg:text-[0.9rem] text-[0.75rem]">There are many variations of passages</p>
+        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 md:mb-0">
+          <img src="images/marker_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
+          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">Graphic & Design</p>
+          <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
-        <div class="bg-white w-[16rem] h-[10rem] lg:h-[14rem] mb-12 rounded-xl mr-10 overflow-hidden">
-          <img src="images/bell_pic.png" class="w-[15%] h-auto ml-[12%] mt-[10%]">
-          <p class="text-[#050931] pt-[5%] pl-[12%] lg:text-[1rem] text-[0.8rem] font-medium">Digital Marketing</p>
-          <p class="text-[#8B939A] py-[2.5%] px-[12%] lg:text-[0.9rem] text-[0.75rem]">There are many variations of passages</p>
+        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 md:mb-0">
+          <img src="images/bell_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
+          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">Digital Marketing</p>
+          <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
-        <div class="bg-white w-[16rem]h-[10rem] lg:h-[14rem] mb-12 rounded-xl overflow-hidden">
-          <img src="images/chair_pic.png" class="w-[15%] h-auto ml-[12%] mt-[10%]">
-          <p class="text-[#050931] pt-[5%] pl-[12%] lg:text-[1rem] text-[0.8rem] font-medium">furniture</p>
-          <p class="text-[#8B939A] py-[2.5%] px-[12%] lg:text-[0.9rem] text-[0.75rem]">There are many variations of passages</p>
+        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto">
+          <img src="images/chair_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
+          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">furniture</p>
+          <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
       </div>
     </div>
