Added Responsiveness to third page

--- a/index.html
+++ b/index.html
@@ -91,47 +91,47 @@
   <div class="bg-[#F6F7FB]">
     <div class="container px-4 mx-auto">
       <div class="pt-12 mb-12">
-        <h4 class="leading-none  text-center md:text-left">
+        <h4 class="leading-none  text-center lg:text-left">
           <span class="font-thin lg:text-[2.5rem] text-[2rem]">Explore</span><br> <span class="font-medium lg:text-[3rem] text-[2.5rem]">By Category</span>
         </h4>
       </div>
-      <div class="md:flex md:flex-row mb-10 md:gap-5 lg:gap-10">
-        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 md:mb-0">
-          <img src="images/leaf_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
-          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">Gardening</p>
+      <div class="lg:flex lg:flex-row pb-10 lg:gap-10">
+        <div class="bg-white lg:w-[22rem] w-[80%] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 lg:mb-0">
+          <img src="images/leaf_pic.png" class="w-[4rem] h-auto ml-[3rem] mt-[3rem]">
+          <p class="text-[#050931] pt-[1rem] px-[3rem] text-[1.2rem] font-medium">Gardening</p>
+          <p class="text-[#8B939A] pt-[0.2rem] px-[3rem] text-[1rem]">There are many variations of passages</p>
+        </div>
+        <div class="bg-white lg:w-[22rem] w-[80%] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 lg:mb-0">
+          <img src="images/ring_pic.png" class="w-[4rem] h-auto ml-[3rem] mt-[3rem]">
+          <p class="text-[#050931] pt-[1rem] px-[3rem] text-[1.2rem] font-medium">Tailoring</p>
           <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
-        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 md:mb-0">
-          <img src="images/ring_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
-          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">Tailoring</p>
+        <div class="bg-white lg:w-[22rem] w-[80%] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 lg:mb-0">
+          <img src="images/brush_pic.png" class="w-[4rem] h-auto ml-[3rem] mt-[3rem]">
+          <p class="text-[#050931] pt-[1rem] px-[3rem] text-[1.2rem] font-medium">Painting</p>
           <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
-        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 md:mb-0">
-          <img src="images/brush_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
-          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">Painting</p>
-          <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
-        </div>
-        <div class="w-[24rem] h-[18rem] overflow-hidden mx-auto mb-10 md:mb-0">
+        <div class="lg:w-[24rem] w-90% h-[18rem] overflow-hidden mx-auto mb-10 lg:mb-0">
           <img src="images/mesh.png" class="w-[100%] h-[100%] object-center object-cover">
         </div>
       </div>
-      <div class="md:flex md:flex-row pb-10 md:gap-5 lg:gap-10">
-        <div class="hidden md:block w-[24rem] h-[18rem] overflow-hidden mx-auto">
+      <div class="lg:flex lg:flex-row pb-10 lg:gap-10">
+        <div class="hidden lg:block w-[24rem] h-[18rem] overflow-hidden mx-auto">
           <img src="images/mesh.png" class="w-[100%] h-[100%] object-center object-cover">
         </div>
-        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 md:mb-0">
-          <img src="images/marker_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
-          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">Graphic & Design</p>
+        <div class="bg-white lg:w-[22rem] w-[80%] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 lg:mb-0">
+          <img src="images/marker_pic.png" class="w-[4rem] h-auto ml-[3rem] mt-[3rem]">
+          <p class="text-[#050931] pt-[1rem] px-[3rem] text-[1.2rem] font-medium">Graphic & Design</p>
           <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
-        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 md:mb-0">
-          <img src="images/bell_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
-          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">Digital Marketing</p>
+        <div class="bg-white lg:w-[22rem] w-[80%] h-[18rem] rounded-xl overflow-hidden mx-auto mb-10 lg:mb-0">
+          <img src="images/bell_pic.png" class="w-[4rem] h-auto ml-[3rem] mt-[3rem]">
+          <p class="text-[#050931] pt-[1rem] px-[3rem] text-[1.2rem] font-medium">Digital Marketing</p>
           <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
-        <div class="bg-white w-[22rem] h-[18rem] rounded-xl overflow-hidden mx-auto">
-          <img src="images/chair_pic.png" class="w-[20%] h-auto ml-[20%] mt-[15%]">
-          <p class="text-[#050931] pt-[5%] pl-[18%] text-[1.2rem] font-medium">furniture</p>
+        <div class="bg-white lg:w-[22rem] w-[80%] h-[18rem] rounded-xl overflow-hidden mx-auto">
+          <img src="images/chair_pic.png" class="w-[4rem] h-auto ml-[3rem] mt-[3rem]">
+          <p class="text-[#050931] pt-[1rem] px-[3rem] text-[1.2rem] font-medium">furniture</p>
           <p class="text-[#8B939A] pt-[2%] pl-[18%] pr-[10%] text-[1rem]">There are many variations of passages</p>
         </div>
       </div>
@@ -143,17 +143,17 @@
   <div class="bg-[#FFF]">
     <div class="container px-4 mx-auto">
       <div class="pt-12 mb-12">
-        <h4 class="leading-none"><span class="font-thin text-[2.5rem]">Latest</span><br> <span class="font-medium text-[3rem]">Jobs Here</span></h4>
+        <h4 class="leading-none text-center lg:text-left"><span class="font-thin text-[2.5rem]">Latest</span><br> <span class="font-medium text-[3rem]">Jobs Here</span></h4>
       </div>
-      <div class="flex flex-row mb-0">
-        <div class="bg-white w-1/3 h-[13rem] lg:h-[16rem] mb-12 rounded-xl mr-10 overflow-hidden shadow-2xl">
+      <div class="lg:flex lg:flex-row">
+        <div class="bg-white lg:w-1/3 w-[80%] mx-auto h-[18rem] mb-10 rounded-xl mr-10 overflow-hidden shadow-2xl">
           <div class="flex mx-[6%] mt-[7%]">
             <img src="images/blue_dot.png" class="w-[3%] h-[3%] my-auto">
-            <p class="text-[#050931] pl-[3%] lg:text-[0.8rem] text-[0.7rem] font-medium my-auto">Logo Design</p>
-            <p class="text-[#8B939A] lg:text-[0.8rem] text-[0.7rem] my-auto ml-auto mr-0">Posted 1 days ago</p>
+            <p class="text-[#050931] pl-[3%] text-[0.8rem] font-medium my-auto">Logo Design</p>
+            <p class="text-[#8B939A] text-[0.8rem] my-auto ml-auto mr-0">Posted 1 days ago</p>
           </div>
           <div class="pt-[2.5%] px-[12%]">
-            <p class="text-[#050931] lg:text-[1rem] text-[0.8rem] font-medium">Marketing & Communications Manager (Intership/cofounder)</p>
+            <p class="text-[#050931] text-[1rem] font-medium">Marketing & Communications Manager (Intership/cofounder)</p>
             <p class="text-[#8B939A] text-[0.85rem] mt-[10%] pb-[2%] border border-[#E7E7E7] border-b-2 border-l-0 border-r-0 border-t-0">Job Type - Full Time</p>
           </div>
           <div class="flex py-[2%] px-[12%]">
@@ -161,17 +161,17 @@
               <p class="text-[#8B939A] text-[0.7rem]">Highest Bid</p>
               <p class="text-[#050931] font-medium text-[1.2rem]">$500</p>
             </div>
-            <a href="#" class="text-[#0071BC] lg:text-[0.95rem] text-[0.7rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
+            <a href="#" class="text-[#0071BC] text-[0.95rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
           </div>
         </div>
-        <div class="bg-white w-1/3 h-[13rem] lg:h-[16rem] mb-12 rounded-xl mr-10 overflow-hidden shadow-2xl">
+        <div class="bg-white lg:w-1/3 w-[80%] mx-auto h-[18rem] mb-10 rounded-xl mr-10 overflow-hidden shadow-2xl">
           <div class="flex mx-[6%] mt-[7%]">
             <img src="images/orange_dot.png" class="w-[3%] h-[3%] my-auto">
-            <p class="text-[#050931] pl-[3%] lg:text-[0.8rem] text-[0.7rem] font-medium my-auto">Need SEO</p>
-            <p class="text-[#8B939A] lg:text-[0.8rem] text-[0.7rem] my-auto ml-auto mr-0">Posted 2 days ago</p>
+            <p class="text-[#050931] pl-[3%] text-[0.8rem] font-medium my-auto">Need SEO</p>
+            <p class="text-[#8B939A] text-[0.8rem] my-auto ml-auto mr-0">Posted 2 days ago</p>
           </div>
           <div class="pt-[2.5%] px-[12%]">
-            <p class="text-[#050931] lg:text-[1rem] text-[0.8rem] font-medium">Search Engine Optimization Structured Data and SEO Strategy</p>
+            <p class="text-[#050931] text-[1rem] font-medium">Search Engine Optimization Structured Data and SEO Strategy</p>
             <p class="text-[#8B939A] text-[0.85rem] mt-[10%] pb-[2%] border border-[#E7E7E7] border-b-2 border-l-0 border-r-0 border-t-0">Job Type - Full Time</p>
           </div>
           <div class="flex py-[2%] px-[12%]">
@@ -179,17 +179,17 @@
               <p class="text-[#8B939A] text-[0.7rem]">Highest Bid</p>
               <p class="text-[#050931] font-medium text-[1.2rem]">$750</p>
             </div>
-            <a href="#" class="text-[#0071BC] lg:text-[0.95rem] text-[0.7rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
+            <a href="#" class="text-[#0071BC] text-[0.95rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
           </div>
         </div>
-        <div class="bg-white w-1/3 h-[13rem] lg:h-[16rem] mb-12 rounded-xl mr-10 overflow-hidden shadow-2xl">
+        <div class="bg-white lg:w-1/3 w-[80%] mx-auto h-[18rem] mb-10 rounded-xl mr-10 overflow-hidden shadow-2xl">
           <div class="flex mx-[6%] mt-[7%]">
             <img src="images/yellow_dot.png" class="w-[3%] h-[3%] my-auto">
-            <p class="text-[#050931] pl-[3%] lg:text-[0.8rem] text-[0.7rem] font-medium my-auto">Graphic Design</p>
-            <p class="text-[#8B939A] lg:text-[0.8rem] text-[0.7rem] my-auto ml-auto mr-0">Posted 3 days ago</p>
+            <p class="text-[#050931] pl-[3%] text-[0.8rem] font-medium my-auto">Graphic Design</p>
+            <p class="text-[#8B939A] text-[0.8rem] my-auto ml-auto mr-0">Posted 3 days ago</p>
           </div>
           <div class="pt-[2.5%] px-[12%]">
-            <p class="text-[#050931] lg:text-[1rem] text-[0.8rem] font-medium">We would need some one who could convert some documents from JPEG to PDF format</p>
+            <p class="text-[#050931] text-[1rem] font-medium">We would need some one who could convert some documents from JPEG to PDF format</p>
             <p class="text-[#8B939A] text-[0.85rem] mt-[10%] pb-[2%] border border-[#E7E7E7] border-b-2 border-l-0 border-r-0 border-t-0">Job Type - Full Time</p>
           </div>
           <div class="flex py-[2%] px-[12%]">
@@ -197,19 +197,19 @@
               <p class="text-[#8B939A] text-[0.7rem]">Highest Bid</p>
               <p class="text-[#050931] font-medium text-[1.2rem]">$600</p>
             </div>
-            <a href="#" class="text-[#0071BC] lg:text-[0.95rem] text-[0.7rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
+            <a href="#" class="text-[#0071BC] text-[0.95rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
           </div>
         </div>
       </div>
-      <div class="flex flex-row">
-        <div class="bg-white w-1/3 h-[13rem] lg:h-[16rem] mb-12 rounded-xl mr-10 overflow-hidden shadow-2xl">
+      <div class="lg:flex lg:flex-row">
+        <div class="bg-white lg:w-1/3 w-[80%] mx-auto h-[18rem] mb-10 rounded-xl mr-10 overflow-hidden shadow-2xl">
           <div class="flex mx-[6%] mt-[7%]">
             <img src="images/red_dot.png" class="w-[3%] h-[3%] my-auto">
-            <p class="text-[#050931] pl-[3%] lg:text-[0.8rem] text-[0.7rem] font-medium my-auto">Marketing</p>
-            <p class="text-[#8B939A] lg:text-[0.8rem] text-[0.7rem] my-auto ml-auto mr-0">Posted 5 days ago</p>
+            <p class="text-[#050931] pl-[3%] text-[0.8rem] font-medium my-auto">Marketing</p>
+            <p class="text-[#8B939A] text-[0.8rem] my-auto ml-auto mr-0">Posted 5 days ago</p>
           </div>
           <div class="pt-[2.5%] px-[12%]">
-            <p class="text-[#050931] lg:text-[1rem] text-[0.8rem] font-medium">Marketing & Communications Manager (Intership/cofounder)</p>
+            <p class="text-[#050931] text-[1rem] font-medium">Marketing & Communications Manager (Intership/cofounder)</p>
             <p class="text-[#8B939A] text-[0.85rem] mt-[10%] pb-[2%] border border-[#E7E7E7] border-b-2 border-l-0 border-r-0 border-t-0">Job Type - Full Time</p>
           </div>
           <div class="flex py-[2%] px-[12%]">
@@ -217,17 +217,17 @@
               <p class="text-[#8B939A] text-[0.7rem]">Highest Bid</p>
               <p class="text-[#050931] font-medium text-[1.2rem]">$600</p>
             </div>
-            <a href="#" class="text-[#0071BC] lg:text-[0.95rem] text-[0.7rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
+            <a href="#" class="text-[#0071BC] text-[0.95rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
           </div>
         </div>
-        <div class="bg-white w-1/3 h-[13rem] lg:h-[16rem] mb-12 rounded-xl mr-10 overflow-hidden shadow-2xl">
+        <div class="bg-white lg:w-1/3 w-[80%] mx-auto h-[18rem] mb-10 rounded-xl mr-10 overflow-hidden shadow-2xl">
           <div class="flex mx-[6%] mt-[7%]">
             <img src="images/blue_dot.png" class="w-[3%] h-[3%] my-auto">
-            <p class="text-[#050931] pl-[3%] lg:text-[0.8rem] text-[0.7rem] font-medium my-auto">Business Development</p>
-            <p class="text-[#8B939A] lg:text-[0.8rem] text-[0.7rem] my-auto ml-auto mr-0">Posted one week ago</p>
+            <p class="text-[#050931] pl-[3%] text-[0.8rem] font-medium my-auto">Business Development</p>
+            <p class="text-[#8B939A] text-[0.8rem] my-auto ml-auto mr-0">Posted one week ago</p>
           </div>
           <div class="pt-[2.5%] px-[12%]">
-            <p class="text-[#050931] lg:text-[1rem] text-[0.8rem] font-medium">iOS CoreML expert to generate interface from compiled models</p>
+            <p class="text-[#050931] text-[1rem] font-medium">iOS CoreML expert to generate interface from compiled models</p>
             <p class="text-[#8B939A] text-[0.85rem] mt-[10%] pb-[2%] border border-[#E7E7E7] border-b-2 border-l-0 border-r-0 border-t-0">Job Type - Full Time</p>
           </div>
           <div class="flex py-[2%] px-[12%]">
@@ -235,17 +235,17 @@
               <p class="text-[#8B939A] text-[0.7rem]">Highest Bid</p>
               <p class="text-[#050931] font-medium text-[1.2rem]">$800</p>
             </div>
-            <a href="#" class="text-[#0071BC] lg:text-[0.95rem] text-[0.7rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
+            <a href="#" class="text-[#0071BC] text-[0.95rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
           </div>
         </div>
-        <div class="bg-white w-1/3 h-[13rem] lg:h-[16rem] mb-12 rounded-xl mr-10 overflow-hidden shadow-2xl">
+        <div class="bg-white lg:w-1/3 w-[80%] mx-auto h-[18rem] mb-10 rounded-xl mr-10 overflow-hidden shadow-2xl">
           <div class="flex mx-[6%] mt-[7%]">
             <img src="images/orange_dot.png" class="w-[3%] h-[3%] my-auto">
-            <p class="text-[#050931] pl-[3%] lg:text-[0.8rem] text-[0.7rem] font-medium my-auto">Experienced Product Designer</p>
-            <p class="text-[#8B939A] lg:text-[0.8rem] text-[0.7rem] my-auto ml-auto mr-0">Posted one week days ago</p>
+            <p class="text-[#050931] pl-[3%] text-[0.8rem] font-medium my-auto">Experienced Product Designer</p>
+            <p class="text-[#8B939A] text-[0.8rem] my-auto ml-auto mr-0">Posted one week days ago</p>
           </div>
           <div class="pt-[2.5%] px-[12%]">
-            <p class="text-[#050931] lg:text-[1rem] text-[0.8rem] font-medium">Looking for an experienced Product Designer Possibly an Arab or can speak in Arabic</p>
+            <p class="text-[#050931] text-[1rem] font-medium">Looking for an experienced Product Designer Possibly an Arab or can speak in Arabic</p>
             <p class="text-[#8B939A] text-[0.85rem] mt-[10%] pb-[2%] border border-[#E7E7E7] border-b-2 border-l-0 border-r-0 border-t-0">Job Type - Full Time</p>
           </div>
           <div class="flex py-[2%] px-[12%]">
@@ -253,7 +253,7 @@
               <p class="text-[#8B939A] text-[0.7rem]">Highest Bid</p>
               <p class="text-[#050931] font-medium text-[1.2rem]">$1000</p>
             </div>
-            <a href="#" class="text-[#0071BC] lg:text-[0.95rem] text-[0.7rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
+            <a href="#" class="text-[#0071BC] text-[0.95rem] my-auto ml-auto mr-0">Apply Now <i class="fa-solid fa-arrow-right ml-2"></i></a>
           </div>
         </div>
       </div>
