Added More Responsiveness

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <div class="container px-4 mx-auto">
       <div class="md:flex">
         <div class="md:flex-auto md:w-1/2 pt-8 md:pt-0">
-          <div class="flex w-[26rem] h-[42px] bg-[#C8E5F5] rounded-3xl md:mt-20 relative">
+          <div class="flex w-[22rem] lg:w-[26rem] h-[42px] bg-[#C8E5F5] rounded-3xl md:mt-20 relative">
             <a href="#" class="px-4 text-[0.7rem] mx-1 text-white text-center bg-[#1e50d7] rounded-3xl leading-8 h-3/4 my-auto">New</a>
-            <p class="text-[#363636] text-[0.9rem] leading-10 ml-2 overflow-hidden">stay connected to get upcoming job with Bube</p>
+            <p class="text-[#363636] text-[0.8rem] lg:text-[0.9rem] leading-10 ml-2 overflow-hidden">stay connected to get upcoming job with Bube</p>
           </div>
           <div class="text-[#050931] mt-6 md:mt-12">
             <div><span class="font-thin text-[2.5rem] lg:text-[4rem] leading-10">The Easiest Way To</span><br> <span class="uppercase leading-none text-[2.8rem] lg:text-[4.5rem] font-medium">access artisans</span></div>
             <p class="text-[1.2rem] lg:text-[1.7rem] font-light my-5">Your Dream Job is waitng For you</p>
-            <form class="flex bg-white p-2 rounded h-[3.5rem] lg:h-[4rem] w-[25rem] lg:w-[45rem] overflow-hidden relative justify-evenly">
+            <form class="flex bg-white p-2 rounded h-[3.5rem] lg:h-[4rem] w-[22rem] lg:w-[45rem] overflow-hidden relative justify-evenly">
               <input type="" name="" placeholder="Job title or key words" class="bg-[#F5F6FA] rounded w-[49%] h-[99%] text-center focus:outline-[#0071BC]">
               <input type="" name="" placeholder="Talent" class="bg-[#F5F6FA] rounded w-[39%] h-[99%] text-center focus:outline-[#0071BC]">
               <button type="submit" class="bg-[#0071BC] text-white w-[9%] rounded"><i class="fas fa-search"></i></button>
@@ -267,12 +267,12 @@
   <!-- Best Freelancer View -->
   <div class="bg-[#FFF] pb-12">
     <div class="container px-4 pt-20 mx-auto">
-      <div class="flex">
-        <div class="flex-auto w-1/2">
-          <img src="images/ellipse1.png" class="w-[40rem] h-auto absolute">
-          <div class="bg-white rounded-2xl w-[31rem] h-[24rem] ml-20 mt-20 absolute shadow-md">
-            <p class="text-[#8392A5] text-center text-3xl font-light pt-8">50,000+ Talented Freelancers</p>
-            <div class="flex mb-2 mt-16">
+      <div class="lg:flex">
+        <div class="lg:flex-auto lg:w-1/2">
+          <img src="images/ellipse1.png" class="w-[98%] mx-auto lg:mx-0 lg:w-[40rem] h-auto relative">
+          <div class="bg-white rounded-2xl w-[80%] mx-auto lg:mx-0 lg:w-[24rem] xl:w-[31rem] h-[24rem] lg:h-[20rem] xl:h-[24rem] lg:ml-14 xl:ml-20 mt-[-70vw] sm:mt-[-64vw] md:mt-[-34rem] lg:mt-[-25rem] xl:mt-[-31rem] relative z-10 shadow-md">
+            <p class="text-[#8392A5] text-center text-xl xl:text-3xl font-light pt-8">50,000+ Talented Freelancers</p>
+            <div class="flex mb-2 mt-20 md:mt-8 lg:mt-16">
               <div class="flex-auto w-[20%]">
                 <img src="images/p-1.png" class="p-4 rounded-full">
               </div>
@@ -304,61 +304,61 @@
                 <img src="images/p-6.png" class="p-4 rounded-full">
               </div>
             </div>
-          </div>
-          <div class="bg-[#fff] rounded-xl w-[12rem] h-[16rem] absolute z-10 shadow-md mt-[18rem] ml-[1rem]">
-            <img src="images/p-10.png" class="w-[50%] h-auto object-center mx-auto mt-10 rounded-full">
-            <div>
-              <p class="text-center text-black font-medium text-sm pt-4">Alen Bouder</p>
-              <p class="text-center text-[#8B939A] font-light text-[0.5rem] lg:text-sm">Product Manager</p>
-              <p class="text-center text-[#8B939A] font-light text-[0.5rem] lg:text-sm pt-4">758 posts</p>
+            <div class="bg-[#fff] rounded-xl w-[9rem] h-[13rem] xl:w-[11rem] lg:h-[12rem] lg:w-[9rem] xl:h-[15rem] relative z-20 shadow-md mt-[-6.5rem] xl:mt-[-8rem] ml-[-3rem] p-4 xl:p-8">
+              <img src="images/p-10.png" class="w-[60%] xl:w-[70%] h-auto object-center mx-auto rounded-full">
+              <div>
+                <p class="text-center text-black font-medium text-sm pt-4">Alen Bouder</p>
+                <p class="text-center text-[#8B939A] font-light text-sm">Product Manager</p>
+                <p class="text-center text-[#8B939A] font-light text-sm pt-2 xl:pt-4">758 posts</p>
+              </div>
             </div>
+            <form class="flex z-12 xl:mt-[-23.5rem] xl:ml-[21rem] lg:mt-[-19.5rem] lg:ml-[10.5rem] md:mt-[-24rem] md:ml-[23rem] sm:mt-[-23rem] sm:ml-[16rem] mt-[-19rem] ml-[2rem]">
+              <input type="" name="" placeholder="Job title or keywords" class="bg-[#fff] rounded-xl md:w-[20rem] w-[15rem] h-[3.5rem] text-center text-[#8B939A] focus:outline-[#0071BC] shadow-md">
+              <button type="submit" class="bg-[#0071BC] text-white w-[3.5rem] h-[3.5rem] rounded-xl absolute ml-[13.5rem] mt-[-1rem]"><i class="fas fa-search"></i></button>
+            </form>
           </div>
-          <form class="flex absolute z-12 mt-[10rem] ml-[22rem]">
-            <input type="" name="" placeholder="Job title or keywords" class="bg-[#fff] rounded-xl w-[20rem] h-[3.5rem] text-center text-[#8B939A] focus:outline-[#0071BC] shadow-md">
-            <button type="submit" class="bg-[#0071BC] text-white w-[3.5rem] h-[3.5rem] rounded-xl absolute ml-[18rem] mt-[-1.3rem]"><i class="fas fa-search"></i></button>
-          </form>
         </div>
-        <div class="flex-auto w-1/2">
-          <div class="pt-12 ml-[6%]">
+        <div class="lg:flex-auto lg:w-1/2">
+          <div class="lg:pt-12 pt-[6rem] ml-[12%]">
             <h4 class="leading-none"><span class="font-thin text-[2.5rem]">Find The</span><br> <span class="font-medium text-[3rem]">Best Freelancer</span></h4>
           </div>
           <div>
-            <div class="flex mx-[6%] mt-[5%]">
+            <div class="flex mx-[12%] mt-[5%]">
               <img src="images/blue_dot.png" class="w-[0.6rem] h-auto my-auto">
               <p class="text-[#050931] pl-[3%] text-[1rem] font-medium my-auto">The best for every budget</p>
             </div>
-            <div class="ml-[6%] mr-[45%] mt-[1%]">
+            <div class="ml-[12%] mr-[45%] mt-[1%]">
               <p class="text-[#8B939A] pl-[3%] text-[0.8rem] font-thin">Find high-quality services at every price point. No hourly rates, just project-based pricing.</p>
             </div>
           </div>
           <div>
-            <div class="flex mx-[6%] mt-[2%]">
+            <div class="flex mx-[12%] mt-[2%]">
               <img src="images/blue_dot.png" class="w-[0.6rem] h-auto my-auto">
               <p class="text-[#050931] pl-[3%] text-[1rem] font-medium my-auto">Quality work done quickly</p>
             </div>
-            <div class="ml-[6%] mr-[45%] mt-[1%]">
+            <div class="ml-[12%] mr-[45%] mt-[1%]">
               <p class="text-[#8B939A] pl-[3%] text-[0.8rem] font-thin">Find the right freelancer to begin working on your project within minutes.</p>
             </div>
           </div>
           <div>
-            <div class="flex mx-[6%] mt-[2%]">
+            <div class="flex mx-[12%] mt-[2%]">
               <img src="images/blue_dot.png" class="w-[0.6rem] h-auto my-auto">
               <p class="text-[#050931] pl-[3%] text-[1rem] font-medium my-auto">Protected payments, every time</p>
             </div>
-            <div class="ml-[6%] mr-[45%] mt-[1%]">
+            <div class="ml-[12%] mr-[45%] mt-[1%]">
               <p class="text-[#8B939A] pl-[3%] text-[0.8rem] font-thin">Always know what you'll pay upfront. Your payment isn't released until you approve the work.</p>
             </div>
           </div>
           <div class="mb-8">
-            <div class="flex mx-[6%] mt-[2%]">
+            <div class="flex mx-[12%] mt-[2%]">
               <img src="images/blue_dot.png" class="w-[0.6rem] h-auto my-auto">
               <p class="text-[#050931] pl-[3%] text-[1rem] font-medium my-auto">24/7 support</p>
             </div>
-            <div class="ml-[6%] mr-[45%] mt-[1%]">
+            <div class="ml-[12%] mr-[45%] mt-[1%]">
               <p class="text-[#8B939A] pl-[3%] text-[0.8rem] font-thin">Questions? Our round-the-clock support team is available to help anytime, anywhere.</p>
             </div>
           </div>
-          <div class="ml-[6%]">
+          <div class="ml-[12%]">
             <button class="bg-[#0071BC] text-white text-md px-10 py-3 rounded-3xl">View All Jobs</button>
           </div>
         </div>
