Added More Responsiveness

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <!-- Category View -->
   <div class="bg-[#F6F7FB]">
     <div class="container px-4 mx-auto">
-      <div class="pt-12 mb-12">
+      <div class="pt-[6rem] mb-12">
         <h4 class="leading-none  text-center lg:text-left">
           <span class="font-thin lg:text-[2.5rem] text-[2rem]">Explore</span><br> <span class="font-medium lg:text-[3rem] text-[2.5rem]">By Category</span>
         </h4>
@@ -445,13 +445,13 @@
   <!-- Get Ride View -->
   <div class="bg-[#FFF]">
     <div class="container px-4 py-20 mx-auto">
-      <div class="flex">
-        <div class="flex-auto w-1/2">
-          <img src="images/get_ride.png" class="w-[42rem] h-auto">
+      <div class="lg:flex">
+        <div class="lg:flex-auto lg:w-1/2">
+          <img src="images/get_ride.png" class="lg:w-[42rem] w-[20rem] mx-auto lg:mx-0 h-auto">
         </div>
-        <div class="flex-auto w-1/2 my-auto">
-          <div class="px-[6.5%]">
-            <h4 class="leading-none text-[#050931] tracking-widest text-[3.4rem] font-medium">Get A Ride In Minutes!</h4>
+        <div class="lg:flex-auto lg:w-1/2 w-[100%] lg:my-auto">
+          <div class="lg:px-[6.5%] px-4 text-center lg:text-left pt-10 lg:pt-0">
+            <h4 class="leading-none text-[#050931] tracking-widest lg:text-[3.4rem] text-[2.5rem] font-medium">Get A Ride In Minutes!</h4>
             <p class="text-[#8B939A] text-[1.1rem] mt-4 mb-10">
               Pick your destination, request a ride, meet your driver, enjoy the journey.
             </p>
