Added More Responsiveness

--- a/index.html
+++ b/index.html
@@ -531,10 +531,10 @@
   <!-- Boost Account View -->
   <div class="bg-[#F6F7FB]">
     <div class="container px-4 py-20 mx-auto">
-      <div class="flex">
-        <div class="flex-auto w-1/2">
-          <div class="pl-[7%]">
-            <h4 class="leading-tight text-[#050931] text-[3.2rem]"><span class="font-thin">Boost your account</span><br><span class="font-medium">With Premium Features</span></h4>
+      <div class="lg:flex">
+        <div class="lg:flex-auto lg:w-1/2 w-[80%] mx-auto">
+          <div class="lg:pl-[7%]">
+            <h4 class="leading-tight text-[#050931] lg:text-[3.2rem] text-[2.4rem]"><span class="font-thin">Boost your account</span><br><span class="font-medium">With Premium Features</span></h4>
             <div class="text-[#8B939A] text-[1.1rem] my-[5%] mr-[10%]">
               <p class="pb-4">
                 Making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable lorem ipsum.
@@ -546,16 +546,14 @@
             <button class="bg-[#0071BC] text-white text-md px-10 py-3 rounded-3xl">Learn More</button>
           </div>
         </div>
-        <div class="flex-auto w-1/2">
+        <div class="lg:flex-auto lg:w-1/2 w-[80%] pt-10 lg:pt-0">
           <img src="images/boost.png" class="w-[42rem] h-auto ml-[7%]">
-
-          <div class="bg-[#ffffff82] rounded-2xl w-[5rem] h-[5rem] lg:w-[9rem] lg:h-[9rem] absolute shadow-md border border-solid border-[#fff] right-0 mr-[12.8rem] mt-[-44.5rem]">
+          <div class="bg-[#ffffff82] rounded-2xl w-[5rem] h-[5rem] lg:w-[9rem] lg:h-[9rem] absolute shadow-md border border-solid border-[#fff] mt-[-20rem] ml-[15rem] sm:mt-[-32rem] sm:ml-[25rem] md:mt-[-37rem] md:ml-[32rem] lg:mt-[-32rem] lg:ml-[22rem] xl:mt-[-42rem] xl:ml-[30rem]">
             <img src="images/bitcoin.png" class="w-[50%] h-auto object-center mx-auto mt-2 lg:mt-4 rounded-full">
             <div>
               <p class="text-center text-black font-medium text-[0.6rem] lg:text-sm mt-2">Cryptocurrency</p>
             </div>
           </div>
-
           <div class="bg-[#ffffffb5] h-[3rem] w-[12rem] lg:h-[5rem] lg:w-[18rem] absolute rounded-2xl ml-[5.5rem] mt-[-10.5rem] shadow-md">
             <img src="images/gmail_pic.png" class="w-[12%] mt-2 lg:mt-3 ml-4 absolute">
             <img src="images/tick_pic.png" class="w-[10%] mt-2 lg:mt-3 mr-2 right-0 absolute">
