--- a/index.html
+++ b/index.html
@@ -569,17 +569,17 @@
   <!-- Search Algorithm View -->
   <div class="bg-[#FFF]">
     <div class="container px-4 py-20 mx-auto">
-      <div class="flex">
-        <div class="flex-auto w-1/2">
+      <div class="lg:flex">
+        <div class="lg:flex-auto lg:w-1/2 w-[80%] mx-auto lg:mx-0">
           <img src="images/algo.png" class="w-[42rem] h-auto">
         </div>
-        <div class="flex-auto w-1/2 my-auto">
-          <div class="px-[6.5%]">
-            <h4 class="leading-none text-[#050931] tracking-widest text-[3.4rem]"><span class="font-thin">Bube search algorithm chooses</span> <span class="font-medium">from 5,000+ artisans.</span></h4>
-            <p class="text-[#8B939A] text-[1.1rem] my-[5%]">
+        <div class="lg:flex-auto lg:w-1/2 lg:my-auto w-[80%] mx-auto lg:mx-0 pt-10 lg:pt-0">
+          <div class="lg:px-[6.5%]">
+            <h4 class="leading-none text-[#050931] tracking-widest lg:text-[3.4rem] text-[2.5rem]"><span class="font-thin">Bube search algorithm chooses</span> <span class="font-medium">from 5,000+ artisans.</span></h4>
+            <p class="text-[#8B939A] lg:text-[1.1rem] text-[1rem] lg:my-[5%] pt-5 lg:pt-0">
               Making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
             </p>
-            <button class="bg-[#0071BC] text-white text-md px-10 py-3 rounded-3xl">Submit An Application</button>
+            <button class="bg-[#0071BC] text-white text-md px-10 py-3 rounded-3xl mt-6 lg:mt-0">Submit An Application</button>
           </div>
         </div>
       </div>
@@ -589,14 +589,14 @@
 
   <!-- Download App Section -->
   <div class="bg-white py-[2%]">
-    <div class="bg-[#D1E8F5] w-[75%] mx-auto py-4 rounded-3xl">
-      <div class="text-center px-4">
-        <p class="text-[#050931] text-[0.9rem] mt-[6rem] mb-3">Become an artisan</p>
-        <p class="text-[#050931] text-[2.9rem] mb-3"><span class="font-thin">Get started with Bube,</span> <span class="font-medium">Download App</span></p>
-        <p class="text-[#050931] text-[1.5rem] font-light">The latest news to drive business strategy</p>
+    <div class="bg-[#D1E8F5] w-[80%] mx-auto lg:py-4 py-2 rounded-3xl">
+      <div class="text-center lg:px-4 px-6">
+        <p class="text-[#050931] text-[0.9rem] lg:mt-[6rem] mt-3 mb-3">Become an artisan</p>
+        <p class="text-[#050931] lg:text-[2.9rem] text-[1.8rem] lg:mb-3 mb-2"><span class="font-thin">Get started with Bube,</span> <span class="font-medium">Download App</span></p>
+        <p class="text-[#050931] lg:text-[1.5rem] text-[1.2rem] font-light">The latest news to drive business strategy</p>
       </div>
-      <div class="mt-12 mb-[8rem]">
-        <div class="flex mx-auto w-[20rem]">
+      <div class="lg:mt-12 lg:mb-[8rem] mt-4 mb-12">
+        <div class="flex mx-auto w-[15rem]">
           <a href="#" class="w-[50%]"><img src="images/app_store.png" class="w-[100%] h-auto"></a>
           <a href="#" class="w-[50%] ml-5"><img src="images/play_store.png" class="w-[100%] h-auto"></a>
         </div>
